Changed author to lowercase text

--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
 		"Template",
 		"Node"
 	],
-	"author": "EmJee1",
+	"author": "emjee1",
 	"license": "ISC",
 	"bugs": {
 		"url": "https://github.com/EmJee1/fluxxo-core/issues"
